--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "juicebox",
+  "name": "npm",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:dev": "nodemon ./db/seed.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JacobL-FTB/juicebox.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JacobL-FTB/juicebox/issues"
+  },
+  "homepage": "https://github.com/JacobL-FTB/juicebox#readme",
+  "description": "",
+  "dependencies": {
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3"
+  }
 }
