--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed:dev": "nodemon ./db/seed.js"
+    "seed:dev": "nodemon ./db/seed.js",
+    "start:dev":"nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +20,10 @@
   "homepage": "https://github.com/JacobL-FTB/juicebox#readme",
   "description": "",
   "dependencies": {
-<<<<<<< HEAD
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-=======
->>>>>>> parent of 0125739 (Created/ API folder)
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
   }
